tests/paczka1/fuzzy1/27651961.err
Error in line 9: R6PA5vpW A297 29,3
Error in line 10: R6PA5vpW S577 48,5
Error in line 20: R6PA5vpW S725 78,5
Error in line 30: R6PA5vpW A297 18,9
Error in line 17: WzV7GI9 S725 81,4
